<resources>
    <string name="app_name">AndroidFramework</string>
    <string name="action_settings">Settings</string>

    <!-- SSQ Project -->
    <string name="ssq_numberchoose_hint">Number</string>
    <string name="ssq_dialog_numberchoose_title">Please input number</string>
    <string name="ssq_dialog_numberchoose_sure">Sure</string>
    <string name="ssq_operator_add">Add</string>
    <string name="ssq_operator_save">Save</string>
    <string name="ssq_operator_cancel">Cancel</string>
    <string name="ssq_operator_reset">Reset Current</string>
    <string name="ssq_operator_clear">Clear All</string>
    <string name="ssq_item_delete">Delete</string>
    <string name="ssq_item_change">Change</string>
    <string name="ssq_number_unit">Notes</string>
    <string name="ssq_alert_redball">Red balls at leat selected six balls!</string>
    <string name="ssq_alert_blueball">Blue balls at leat selected one ball</string>
    <string name="ssq_alert_money">We don\'t comment you to buy this group!You need to pay so many money than you can get reward!</string>
    <string name="ssq_money_unit"> yuan</string>
    <string name="ssq_menu_save">Save to phone</string>
    <string name="ssq_save_alert">Nothing need to Save</string>
    <string name="ssq_delete_error">Delete this note error!</string>

    <string name="ssq_db_error">Copy database error!</string>
    
    <string name="ssq_choose_period">Period</string>
    <string name="ssq_chhose_note">Notes</string>

    <!--Main item text-->
    <string name="ssq_mainperiod_infor" formatted="false">"Period %1$s Result"</string>
    <string name="ssq_mainperiod_time_infor" formatted="false">"The lottery time: %1$s(%2$s)"</string>
    <string name="ssq_mainperiod_item_infor">Result: </string>
    <string name="ssq_mainperiod_item__seq_infor">Sequence: </string>
    <string name="ssq_mainperiod_price_infor" formatted="false">"First prize: %1$s Notes"</string>
    <string name="ssq_mainperiod_value_infor" formatted="false">"Price: %1$s Yuan"</string>
    <string name="ssq_mainitem_more_text">More</string>
    <string name="ssq_mainperiod_myprice_infor" formatted="false">"My winning: %1$s Notes"</string>
    <string name="ssq_mainperiod_myprice" formatted="false">"Reward level: %1$s Yuan"</string>

    <string name="ssq_week_one">SUNDAY</string>
    <string name="ssq_week_two">MONDAY</string>
    <string name="ssq_week_three">TUESDAY</string>
    <string name="ssq_week_four">WEDNESDAY</string>
    <string name="ssq_week_five">THURSDAY</string>
    <string name="ssq_week_six">FRIDAY</string>
    <string name="ssq_week_seven">SATURDAY</string>

</resources>
